--- a/k8s.yaml
+++ b/k8s.yaml
@@ -49,23 +49,45 @@ spec:
             options:
               networkPath: "//192.168.2.126/sambashare"
               mountOptions: ""
-        
+
 ---
 
 apiVersion: v1
 kind: Service
 metadata:
-  name: youtube-download-nodeport
+  name: youtube-downloader
 spec:
-  type: NodePort
+  type: ClusterIP
   selector:
     app: youtube-downloader
   ports:
-    - port: 80
-      name: web
-      targetPort: 80
-      nodePort: 30001
-    - port: 8081
-      name: api
-      targetPort: 8081
-      nodePort: 30002
+  - name: web
+    port: 80
+    targetPort: 80
+  - name: api
+    port: 8081
+    targetPort: 8081
+
+---
+
+apiVersion: extensions/v1beta1
+kind: Ingress
+metadata:
+  name: youtube-downloader
+  annotations:
+    kubernetes.io/ingress.class: nginx
+    #nginx.ingress.kubernetes.io/rewrite-target: /
+    nginx.ingress.kubernetes.io/whitelist-source-range: 192.168.2.0/8
+spec:
+  rules:
+  - host: yt.h5b.de
+    http:
+      paths:
+      - path: /
+        backend:
+          serviceName: youtube-downloader
+          servicePort: 80
+      - path: /api
+        backend:
+          serviceName: youtube-downloader
+          servicePort: 8081
