--- a/k8s.yaml
+++ b/k8s.yaml
@@ -76,18 +76,20 @@ metadata:
   name: youtube-downloader
   annotations:
     kubernetes.io/ingress.class: nginx
-    #nginx.ingress.kubernetes.io/rewrite-target: /
+    #nginx.ingress.kubernetes.io/rewrite-target: /api
+    nginx.ingress.kubernetes.io/configuration-snippet: |
+        rewrite /api/([^.]+)$ /$1 break;  
     nginx.ingress.kubernetes.io/whitelist-source-range: 192.168.2.0/8
 spec:
   rules:
   - host: yt.h5b.de
     http:
       paths:
+      - path: /api/
+        backend:
+          serviceName: youtube-downloader
+          servicePort: api
       - path: /
         backend:
           serviceName: youtube-downloader
-          servicePort: 80
-      - path: /api
-        backend:
-          serviceName: youtube-downloader
-          servicePort: 8081
+          servicePort: web
