fix port section

--- a/k8s.yaml
+++ b/k8s.yaml
@@ -69,10 +69,12 @@ spec:
         backend:
           service:
             name: youtube-downloader
-            port: api
+            port: 
+              name: api
       - path: /
         pathType: ImplementationSpecific
         backend:
           service:
             name: youtube-downloader
-            port: web
+            port: 
+              name: web
